--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
 /Demo01/Demo01/nbproject/private/
 /Demo01/Demo01/build/
+/Demo01/Demo01/dist/
+/Proyecto01/Demo02/nbproject/private/
+/Proyecto01/Demo02/build/
+/Proyecto01/Demo02/dist/
+/Proyecto01/Demo03/nbproject/private/
+/Proyecto01/Demo03/build/
+/Proyecto01/Demo03/dist/
+/Proyecto01/Demo04/nbproject/private/
+/Proyecto01/Demo04/build/
+/Proyecto01/Demo04/dist/
+/Proyecto01/Demo05/nbproject/private/
